main section some added

--- a/style.css
+++ b/style.css
@@ -71,3 +71,26 @@ nav a{
     font-weight: 700;
     padding: 15px 35px;
 }
+
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+main section{
+    margin-top: 130px;
+}
+/* about section style */
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
