--- a/style.css
+++ b/style.css
@@ -94,3 +94,80 @@ main section{
 .about-info{
     text-align: center;
 }
+
+/* skill related style */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+}
+.skill-description{
+    color:  #757575;
+}
+#what-description{
+    padding: 30px 140px;
+}
+/* resume section style */
+.resume-col-title{
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: Open Sans;
+    max-resolution: 10px;
+  
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-des, .resume-ins{
+    color:  #757575;
+}
+.resume-item-title{
+    color:  #474747;
+    font-size: 25px;
+    font-weight: 700;
+
+}
+.resume-container{
+    margin: 30px;
+}
+.resume-ins{
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
+footer{
+    display: flex;
+    background: #FFF8F3;
+    gap: 100px;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+.social-links a{
+    margin-right: 25px;
+}
+.footer-col{
+    width: 50%;
+    text-align: left;
+}
+.contact input[type="text"], .contact input[type="email"], textarea{
+        display: block;
+        margin-bottom: 25px;
+        padding: 18px 35px;
+        color:  #757575;
+        border-radius: 5px;
+        background:  #FFF;
+        border: 0;
+        width: 100%;
+}
+
