--- a/style.css
+++ b/style.css
@@ -1,16 +1,44 @@
-.header{
-    background-color: rgb(247, 247, 247);
+/* common shared styles */
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+.text-primary{
+    color: #FD6E0A;
+}
+.btn-primary{
+    border-radius: 5px;
+    background: #FD6E0A;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+}
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+  
+}
+.section-title{
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
 
 }
+/* nav related styles */
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 100px;
+    margin: 0 200px;
 }
 .nav-title{
-    color: #000000;
-    
+    color: var(--dark-01, #181818);
+    font-size: 45px;
+    font-weight: 800;
+   
 }
 nav > ul{
     display: flex;
@@ -22,9 +50,15 @@ nav li{
 }
 nav a{
     text-decoration: none;
-    color: black;
+    color: #181818;
 }
-
+/* header related styles */
+.header{
+    background: #FFF8F3;
+    background-image: url(../images/header_bg.png), url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right, top left;
+}
 .banner{
     padding: 30px 30px 0px 150px;
     display: flex;
@@ -59,19 +93,7 @@ nav a{
     margin-right: 15px;
 
 }
-.text-primary{
-    color: #a4e2ff;
-}
-.btn-primary{
-    border-radius: 5px;
-    background: #8bbaff;
-    border: 0;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 15px 35px;
-}
-
+/* main section style */
 main{
     max-width: 1140px;
     margin: 0px auto;
@@ -94,7 +116,6 @@ main section{
 .about-info{
     text-align: center;
 }
-
 /* skill related style */
 .skills-container{
     display: flex;
